# com3014

./: .dockerignore  .gitignore  README.md
.github/workflows/: api-gateway-pr.yml  auth-service-pr.yml
a.n.t.t.o/: .env.dev  Dockerfile  jsconfig.json  msalConfig.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
a.n.t.t.o/src/: App.jsx  Header.jsx  index.css
a.n.t.t.o/src/app/: globals.css  layout.js  page.js
a.n.t.t.o/src/app/admin/: page.js
a.n.t.t.o/src/app/appointments/: page.js
a.n.t.t.o/src/app/community/: page.js
a.n.t.t.o/src/app/community_list/: page.js
a.n.t.t.o/src/app/create-community/: page.js
a.n.t.t.o/src/app/event_creation/: page.js
a.n.t.t.o/src/app/events/: page.js
a.n.t.t.o/src/app/home/: page.js
a.n.t.t.o/src/app/live-chat/: page.js
a.n.t.t.o/src/app/opportunities/: page.js
a.n.t.t.o/src/app/post/: page.js
a.n.t.t.o/src/app/profile/: page.js
a.n.t.t.o/src/app/sign-in/: page.js
a.n.t.t.o/src/app/sign-out/: page.js
a.n.t.t.o/src/app/sign-up/: page.js
a.n.t.t.o/src/app/skills/: page.js
a.n.t.t.o/src/components/: AppointmentCard.js  ChatMessage.js  ChatMessageBox.js  CheckboxOption.js  Comment.js  CommentBox.js  Community.js  CommunityCard.js  CommunityCreation.js  CommunityFrame.js  CompanyCard.js  EventCard.js  EventDescCard.js  EventDescFrame.js  EventFrame.js  EventPanel.js  Filter.js  FilterOption.js  Footer.js  Frame.js  Frame2.js  Frame3.js  HomeCard.js  HomeImage.js  MentoringCard.js  Navbar.js  OpportunityCard.js  PostCard.js  PostContent.js  PostCreationBox.js  ProfileCard.js  ProfileInfoCard.js  ProfileSkillCard.js  Room.js  SkillCard.js  SkillPopUp.js  Tag.js  UserCard.js
api-gateway/: Cargo.toml  Dockerfile  README.md
api-gateway/src/: auth.rs  docs.rs  error.rs  events.rs  main.rs  metrics.rs  state.rs
api-gateway/src/auth/: dto.rs  error.rs  handlers.rs
api-gateway/src/events/: dto.rs  error.rs  handlers.rs
common/shared-rust/: Cargo.toml
common/shared-rust/src/: claims.rs  error.rs  jwt.rs  lib.rs
infra/: deploy_k8.sh  docker-compose.yml
infra/helm/charts/api-gateway/: Chart.yaml  values.yaml
infra/helm/charts/auth/: Chart.yaml  values.yaml
infra/helm/charts/community/: Chart.yaml
infra/helm/charts/content/: Chart.yaml
infra/helm/charts/events/: Chart.yaml
infra/helm/charts/frontend/: Chart.yaml
infra/helm/umbrella-chart/: Chart.yaml  values.yaml
services/auth-service/: .dockerignore  Cargo.toml  Dockerfile  README.md
services/auth-service/api/: Cargo.toml
services/auth-service/api/src/: auth.rs  docs.rs  error.rs  handlers.rs  lib.rs
services/auth-service/entity/: Cargo.toml
services/auth-service/entity/src/: lib.rs  prelude.rs  sea_orm_active_enums.rs  user.rs  user_community_role_mapping.rs
services/auth-service/migration/src/: lib.rs  m20250226_103552_create_user.rs  m20250311_130030_add_user_roles.rs
services/auth-service/src/: auth.rs  handlers.rs  main.rs  routes.rs
services/community-service/: Dockerfile  README.md  manage.py  requirements.txt
services/community-service/antto_community/: asgi.py  settings.py  urls.py  wsgi.py
services/community-service/community/: models.py  serializers.py  tests.py  urls.py  views.py
services/community-service/community/migrations/: 0001_initial.py  0002_community_members.py  0003_alter_community_members.py  0004_alter_community_desc.py
services/community-service/live_chat/: consumers.py  models.py  routing.py  serializers.py  tests.py  views.py
services/community-service/live_chat/migrations/: 0001_initial.py
services/community-service/user/: models.py  tests.py  views.py
services/community-service/user/migrations/: 0001_initial.py
services/content-service/: Dockerfile  README.md  manage.py  requirements.txt
services/content-service/content/: asgi.py  settings.py  urls.py  wsgi.py
services/content-service/post/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
services/content-service/post/migrations/: 0001_initial.py  0002_comment_rename_datecreated_post_date_created_and_more.py  0003_alter_comment_post.py  0003_comment_reply_to_alter_comment_post.py  0004_comment_likes_post_likes.py  0005_fileupload.py  0006_post_attached_file_alter_comment_reply_to_and_more.py  0007_remove_post_attached_file.py
services/event_service/: Dockerfile  db.sqlite3  readme.md
services/event_service/db/: db.sqlite3
services/event_service/event_service/: settings.py  urls.py
services/event_service/events/: DEBUG_generate_token.py  authentication.py  models.py  views.py
services/event_service/events/migrations/: 0001_initial.py
services/event_service/events/test/: test_api.py
(+28 files in other folders)
