[package]
name = "shared-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aide = { version = "0.14.1", features = ["macros"] }
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
