[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
sea-orm = { version = "1.1.6", features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.15.0", features = ["serde", "v4"] }

entity = { path = "../entity" }
migration = { path = "../migration" }
argon2 = "0.5.3"
thiserror = "2.0.11"
