[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
sea-orm = { version = "1.1.6", features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.15.0", features = ["serde", "v4"] }
argon2 = "0.5.3"
thiserror = "2.0.11"
http-body-util = "0.1.2"
mime = "0.3.17"
aide = { version = "0.14.1", features = ["axum-json", "scalar", "macros"] }
schemars = { version = "0.8.22", features = ["uuid1"] }

entity = { path = "../entity" }
migration = { path = "../migration" }

shared-rust = { path = "../../../common/shared-rust" }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
